--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
             min-height: 100vh;
         }
 
+        a {
+            color: var(--accent);
+            text-decoration: none;
+        }
+
         .container {
             max-width: 960px;
             margin: 0 auto;
@@ -45,6 +50,27 @@
             gap: 3.5rem;
         }
 
+        /* NAVIGATION */
+        nav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 2rem;
+        }
+
+        .logo {
+            font-family: 'Playfair Display', serif;
+            font-weight: 500;
+            font-size: 1.4rem;
+        }
+
+        .nav-links a {
+            margin-left: 1.8rem;
+            font-size: 0.95rem;
+            letter-spacing: 0.04em;
+        }
+
+        /* HEADER */
         header {
             text-align: center;
         }
@@ -62,6 +88,7 @@
             letter-spacing: 0.04em;
         }
 
+        /* PLAYER */
         .player {
             display: flex;
             justify-content: center;
@@ -76,6 +103,7 @@
             background-color: #000;
         }
 
+        /* ABOUT */
         .about {
             text-align: center;
             max-width: 720px;
@@ -88,6 +116,7 @@
             margin-bottom: 1rem;
         }
 
+        /* LISTEN BUTTON */
         .listen-btn {
             display: flex;
             justify-content: center;
@@ -104,6 +133,7 @@
             border: 1px solid rgba(127, 140, 255, 0.3);
         }
 
+        /* FOOTER */
         footer {
             text-align: center;
             font-size: 0.8rem;
@@ -111,6 +141,7 @@
             margin-top: 2rem;
         }
 
+        /* MEDIA */
         @media (max-width: 600px) {
             header h1 {
                 font-size: 2.1rem;
@@ -119,6 +150,27 @@
             .container {
                 padding: 2.5rem 1.2rem;
             }
+
+            nav {
+                flex-direction: column;
+                gap: 1rem;
+            }
+
+            .nav-links a {
+                margin-left: 0;
+            }
+        }
+
+        /* SECTION SPACING */
+        section {
+            padding: 2rem 0;
+        }
+
+        hr {
+            border: none;
+            height: 1px;
+            background: rgba(255,255,255,0.1);
+            margin: 3rem 0;
         }
     </style>
 </head>
@@ -126,14 +178,26 @@
 
     <main class="container">
 
-        <!-- Header -->
-        <header>
+        <!-- NAVIGATION -->
+        <nav>
+            <div class="logo">🎵 The Musical Echoes</div>
+            <div class="nav-links">
+                <a href="#home">Home</a>
+                <a href="#about">About</a>
+                <a href="#listen">Listen</a>
+            </div>
+        </nav>
+
+        <!-- HEADER -->
+        <header id="home">
             <h1>The Musical Echoes</h1>
             <p>Ambient radio for quiet minds and infinite inner landscapes</p>
         </header>
 
-        <!-- TuneIn Player -->
-        <section class="player">
+        <hr>
+
+        <!-- PLAYER -->
+        <section class="player" id="listen">
             <!-- Placeholder TuneIn embed URL -->
             <iframe 
                 src="https://tunein.com/embed/player/s000000/"
@@ -141,8 +205,10 @@
             </iframe>
         </section>
 
-        <!-- About -->
-        <section class="about">
+        <hr>
+
+        <!-- ABOUT -->
+        <section class="about" id="about">
             <p>
                 The Musical Echoes is a continuous ambient radio stream designed for focus, calm, and reflection.
             </p>
@@ -155,14 +221,16 @@
             </p>
         </section>
 
-        <!-- Listen Button -->
+        <hr>
+
+        <!-- LISTEN BUTTON -->
         <section class="listen-btn">
             <a href="https://tunein.com/" target="_blank" rel="noopener">
                 Listen on TuneIn
             </a>
         </section>
 
-        <!-- Footer -->
+        <!-- FOOTER -->
         <footer>
             © 2026 The Musical Echoes – Ambient Radio. All rights reserved.
         </footer>
