--- a/index.html
+++ b/index.html
@@ -198,12 +198,12 @@
 
         <!-- PLAYER -->
         <section class="player" id="listen">
-            <!-- Placeholder TuneIn embed URL -->
-            <iframe 
-                src="https://tunein.com/embed/player/s000000/"
-                title="The Musical Echoes – Ambient Radio Player">
-            </iframe>
-        </section>
+    <audio controls autoplay loop style="width:100%; max-width:480px;">
+        <source src="https://usa16.fastcast4u.com/proxy/farrukh?mp=/1" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+</section>
+
 
         <hr>
 
@@ -239,3 +239,4 @@
 
 </body>
 </html>
+
